--- a/VendorOrder/Views/Order/Index.cshtml
+++ b/VendorOrder/Views/Order/Index.cshtml
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My To-Do List!</title>
+    <title>Vendor Order Tracker</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   </head>
   <body>
@@ -22,7 +22,7 @@
     </ul>
     <a href="/orders/new">Add a new order.</a>
     <form action="/orders/delete" method="post">
-      <button type="submit" name="button">Clear List</button>
+      <button type="submit" name="button">Clear Orders</button>
     </form>
   </body>
 </html>
