--- a/VendorOrder/Views/Order/View.cshtml
+++ b/VendorOrder/Views/Order/View.cshtml
@@ -2,18 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My To-Do List!</title>
+    <title>Vendor Order Tracker</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   </head>
   <body>
-<h1>To Do List order Details: </h1>
+<h1>@Model["Vendor"].vendorName Order @Model["Order"].ID Details: </h1>
 
 <h2>@Model["Order"].Description</h2>
 <h2>@Model["Order"].Date</h2>
 <h2>@Model["Order"].Price</h2>
-<h3>vendor: @Model["Vendor"].vendorName</h3>
 
-<a href='/vendor/@Model["Vendor"].ID/orders/new'>Add another item</a>
+<a href='/vendor/@Model["Vendor"].ID/orders/new'>Add another order</a>
 <a href='/vendor'>View all vendor</a>
   </body>
 </html>
