--- a/VendorOrder/Views/Home/Index.cshtml
+++ b/VendorOrder/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Hello Vendors!</h1>
+    <h1>Hello Vendors!</h1><br>
     <h3><a href='/vendor'>View Previous and Current Vendors</a></h3>
     <h3><a href='/vendor/new'>Create a new Vendor.</a></h3>
   </body>
