--- a/VendorOrder/Views/Order/New.cshtml
+++ b/VendorOrder/Views/Order/New.cshtml
@@ -6,16 +6,16 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Add a new order to @Model.vendorName</h1>
+    <h1>Add a new order to @Model.vendorName</h1><br>
 
     <form action="/vendor/@Model.ID/orders" method="post">
       <input id="vendorId" name="vendorId" type="hidden" value="@Model.ID">
       <label for="orderDescription">order Description</label>
-      <input id="orderDescription" name="orderDescription" type="text">
+      <input id="orderDescription" name="orderDescription" type="text"><br>
       <label for="orderDate">order Date</label>
-      <input id="orderDate" name="orderDate" type="text">
+      <input id="orderDate" name="orderDate" type="text"><br>
       <label for="orderPrice">order Price</label>
-      <input id="orderPrice" name="orderPrice" type="text">
+      <input id="orderPrice" name="orderPrice" type="text"><br>
       <button type='submit'>Add order</button>
     </form>
   </body>
